--- a/index.html
+++ b/index.html
@@ -1,3 +1,192 @@
-Aula 01 – Atividade 01: tipo do dado
-Aula 01 – Atividade 02: primo
-Aula 01 – Atividade 03: par/ímpa
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Guia Completo – Troller T4 (2015–2021)</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+
+    <div class="container">
+
+        <h1>Guia Completo – Troller T4</h1>
+        <p class="subtitle">Nova geração • 2015 a 2021 • Todas as versões</p>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Ano</th>
+                    <th>Versão</th>
+                    <th>Fipe (Jan/2026)</th>
+                    <th>O que mudou / Diferencial</th>
+                </tr>
+            </thead>
+
+            <tbody>
+
+                <!-- 2015 -->
+                <tr>
+                    <td>2015</td>
+                    <td>T4 XLT (Manual)</td>
+                    <td>R$ 154.870</td>
+                    <td>
+                        <strong>Marco Zero da nova geração.</strong><br>
+                        Novo chassi, carroceria e motor 3.2 Duratorq (200 cv).
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <img src="img/2015_01.jpg">
+                            <img src="img/2015_02.jpg">
+                            <img src="img/2015_03.jpg">
+                            <img src="img/2015_04.jpg">
+                            <!-- <img src="img/2015_05.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2016 -->
+                <tr>
+                    <td>2016</td>
+                    <td>T4 XLT (Manual)</td>
+                    <td>R$ 159.796</td>
+                    <td>
+                        Sem alterações mecânicas.<br>
+                        Melhorias em vedações e acabamento interno.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <!-- <img src="img/2016_xlt_01.jpg"> -->
+                            <!-- <img src="img/2016_xlt_02.jpg"> -->
+                            <!-- <img src="img/2016_xlt_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2017 Bold -->
+                <tr>
+                    <td>2017</td>
+                    <td>
+                        T4 Bold
+                        <span class="badge especial">Série Especial</span>
+                    </td>
+                    <td>R$ 175.548</td>
+                    <td>
+                        Visual Black Edition.<br>
+                        Snorkel e multimídia Kenwood de série.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <!-- <img src="img/2017_bd_01.jpg"> -->
+                            <!-- <img src="img/2017_bd_02.jpg"> -->
+                            <!-- <img src="img/2017_bd_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2018 -->
+                <tr>
+                    <td>2018</td>
+                    <td>T4 XLT</td>
+                    <td>R$ 178.164</td>
+                    <td>
+                        Novas cores e melhorias no isolamento acústico.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <!-- <img src="img/2018_xlt_01.jpg"> -->
+                            <!-- <img src="img/2018_xlt_02.jpg"> -->
+                            <!-- <img src="img/2018_xlt_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2019 Trail -->
+                <tr>
+                    <td>2019</td>
+                     <td>
+                        T4 Trail
+                        <span class="badge especial">Série Especial</span>
+                    </td>
+                    <td>R$ 189.500</td>
+                    <td>
+                        Para-choques de aço e protetores de cárter de série.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <img src="img/2019_tr_01.jpg">
+                            <!-- <img src="img/2019_tr_02.jpg"> -->
+                            <!-- <img src="img/2019_tr_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2020 TX4 -->
+                <tr>
+                    <td>2020</td>
+                    <td>TX4 (Automático)</td>
+                    <td>R$ 217.921</td>
+                    <td>
+                        Câmbio automático e bloqueio de diferencial traseiro Eaton.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <!-- <img src="img/2020_tx4_01.jpg"> -->
+                            <!-- <img src="img/2020_tx4_02.jpg"> -->
+                            <!-- <img src="img/2020_tx4_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+                <!-- 2021 TX4 Connect -->
+                <tr>
+                    <td>2021</td>
+                    <td>
+                        TX4 Connect
+                        <span class="badge final">Final de Linha</span>
+                    </td>                  
+                    <td>R$ 235.694</td>
+                    <td>
+                        Central multimídia 7" com Android Auto e Apple CarPlay.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <img src="img/2021_tx4c_01.jpg">
+                            <!-- <img src="img/2021_tx4c_02.jpg"> -->
+                            <!-- <img src="img/2021_tx4c_03.jpg"> -->
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+
+    </div>
+
+</body>
+
+</html>
