--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Guia Completo – Troller T4 (2015–2021)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Guia Completo – Troller T4 (2015–2021)</title>
     <link rel="stylesheet" href="css/style.css">
+
+
 
 </head>
 
@@ -26,7 +29,7 @@
                 </tr>
             </thead>
 
-            <tbody>
+            <tbody>F
 
                 <!-- 2015 -->
                 <tr>
@@ -88,9 +91,16 @@
                 <tr>
                     <td colspan="4">
                         <div class="gallery">
-                            <!-- <img src="img/2017_bd_01.jpg"> -->
-                            <!-- <img src="img/2017_bd_02.jpg"> -->
-                            <!-- <img src="img/2017_bd_03.jpg"> -->
+                            <img src="img/2017_bd_01.jpg">
+                            <img src="img/2017_bd_02.jpg">
+                            <img src="img/2017_bd_03.jpg">
+                            <img src="img/2017_bd_04.jpg">
+                            <img src="img/2017_bd_05.jpg">
+                            <img src="img/2017_bd_06.jpg">
+                            <img src="img/2017_bd_07.jpg">
+                            <img src="img/2017_bd_08.jpg">
+                            <img src="img/2017_bd_09.jpg">
+                            
                         </div>
                         <div class="divider"></div>
                     </td>
@@ -115,11 +125,33 @@
                         <div class="divider"></div>
                     </td>
                 </tr>
+                <!-- 2019 -->
+                <tr>
+                    <td>2019</td>
+                    <td>
+                        T4
+                    </td>
+                    <td>R$ 189.500</td>
+                    <td>
+                        Para-choques de aço e protetores de cárter de série.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4">
+                        <div class="gallery">
+                            <img src="img/2019_01.jpg">
+                            <img src="img/2019_02.jpg">
+                            <img src="img/2019_03.jpg">
+                            <img src="img/2019_04.jpg">
+                        </div>
+                        <div class="divider"></div>
+                    </td>
+                </tr>
 
                 <!-- 2019 Trail -->
                 <tr>
                     <td>2019</td>
-                     <td>
+                    <td>
                         T4 Trail
                         <span class="badge especial">Série Especial</span>
                     </td>
@@ -132,8 +164,8 @@
                     <td colspan="4">
                         <div class="gallery">
                             <img src="img/2019_tr_01.jpg">
-                            <!-- <img src="img/2019_tr_02.jpg"> -->
-                            <!-- <img src="img/2019_tr_03.jpg"> -->
+                            <img src="img/2019_tr_02.jpg">
+                            <img src="img/2019_tr_03.jpg">
                         </div>
                         <div class="divider"></div>
                     </td>
@@ -151,9 +183,9 @@
                 <tr>
                     <td colspan="4">
                         <div class="gallery">
-                            <!-- <img src="img/2020_tx4_01.jpg"> -->
-                            <!-- <img src="img/2020_tx4_02.jpg"> -->
-                            <!-- <img src="img/2020_tx4_03.jpg"> -->
+                            <img src="img/2020_tx4_01.jpg">
+                            <img src="img/2020_tx4_02.jpg">
+                            <img src="img/2020_tx4_03.jpg">
                         </div>
                         <div class="divider"></div>
                     </td>
@@ -165,7 +197,7 @@
                     <td>
                         TX4 Connect
                         <span class="badge final">Final de Linha</span>
-                    </td>                  
+                    </td>
                     <td>R$ 235.694</td>
                     <td>
                         Central multimídia 7" com Android Auto e Apple CarPlay.
@@ -188,9 +220,5 @@
     </div>
 
 </body>
-
-<footer>
-    BrunoS - 2026
-</footer>
 
 </html>
